# PhoenixAI

./: app.py  main.py  pyproject.toml
generated_projects/accounts_manager/: cli.py  main.py
generated_projects/accounts_manager/accounts/: __init__.py  models.py  service.py  storage.py
generated_projects/accounts_manager/data/: accounts.json
generated_projects/library_management_system/: main.py
generated_projects/library_management_system/data/: books.json  loans.json  users.json
src/: graph.py
src/agents/: coder.py  critic.py  executor.py  writer.py
src/agents/documentation/: coder_documentation.jsonl
src/config/: settings.py
src/generated_projects/Simple Calculator CLI/: calculator_cli.py
src/generated_projects/cli_calculator/: main.py
src/generated_projects/cli_calculator/calculator/: __init__.py  operations.py  storage.py
src/generated_projects/cli_calculator/data/: history.json
src/generated_projects/guess_the_number/: guess_the_number.py
src/generated_projects/guess_the_number/data/: stats.json
src/generated_projects/library_management_system/: library.py
src/generated_projects/number_guessing_game/: game.py
src/generated_projects/simple_accounts_manager/: accounts_manager.py
src/generated_projects/simple_calculator/: calculator.py
src/generated_projects/todo_cli/: todo.py
src/generated_projects/todo_cli/data/: tasks.json
src/model/: schema.py
src/prompts/: coder_prompt.py  critic_prompt.py  knowledge_prompt.py
